Fixed issue with letter/line spacing. They no longer override each other

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,7 +19,6 @@ body {
 .gpii-fd p {
     font-size: 2.25rem; /*base font size */
     padding: 0 2rem;
-    letter-spacing: normal;
 }
 
 .gpii-fd button {
